# dm_brokers

./: LICENSE  README.md  consumer.py  pyproject.toml  requirements.txt
.github/workflows/: python.yml
framework/internal/http/: account.py  mail.py
framework/internal/kafka/: consumer.py  producer.py  singleton.py
tests/: conftest.py  test_register_consumer.py  test_register_events.py  test_register_events_errors.py  test_registration.py
